--- a/frontend/src/Components/styles.css
+++ b/frontend/src/Components/styles.css
@@ -4,3 +4,21 @@
   overflow-y: scroll;
   scrollbar-width: none;
 }
+
+.emoji {
+  position: relative;
+  background-color: black;
+  font-size: 1.5rem;
+  color: #ffff00c8;
+  cursor: pointer;
+}
+
+.wrapper {
+  position: relative;
+}
+
+.picker-wrapper {
+  position: absolute;
+  bottom: calc(100% + 10px);
+  /* right: 0; */
+}
